3 different methods of getting cookie none working.